naming prefix changed.

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "meal-app",
-    "slug": "meal-app",
+    "name": "mobile-app-template",
+    "slug": "mobile-app-template",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
